# GridOS

./: .bandit.yml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-docker.yml  publish-pypi.yml  release.yml
data/: sample_load_profile.csv  sample_solar_irradiance.csv
docs/: adapters.md  api_reference.md  architecture.md  deployment.md  models.md  quickstart.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
notebooks/: 01_quickstart.py
requirements/: base.txt  dev.txt  ml.txt  prod.txt
scripts/: generate_sample_data.py  run_demo.sh
src/gridos/: __init__.py  config.py  main.py
src/gridos/adapters/: __init__.py  base.py  dnp3.py  iec61850.py  modbus.py  mqtt.py  opcua.py
src/gridos/api/: __init__.py  dependencies.py  websocket_manager.py
src/gridos/api/routes/: __init__.py  control.py  devices.py  forecast.py  optimization.py  telemetry.py
src/gridos/digital_twin/: __init__.py  engine.py
src/gridos/digital_twin/ml/: __init__.py  anomaly_detector.py  forecaster.py  trainer.py
src/gridos/digital_twin/models/: __init__.py  battery.py  bus.py  ev_charger.py  line.py  load.py  pv.py  transformer.py
src/gridos/edge/: __init__.py  local_cache.py  sync.py
src/gridos/models/: __init__.py  common.py  iec61850.py
src/gridos/optimization/: __init__.py  dispatch.py  scheduler.py
src/gridos/security/: __init__.py  auth.py
src/gridos/storage/: __init__.py  base.py  influxdb.py  timescaledb.py
src/gridos/utils/: __init__.py  helpers.py  logging.py  metrics.py
tests/: __init__.py  conftest.py  test_adapters.py  test_api.py  test_digital_twin.py  test_edge.py  test_ml.py  test_models.py  test_optimization.py  test_security.py  test_storage.py  test_utils.py
