[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gridos"
version = "0.1.0"
description = "GridOS — Open Energy Operating System: vendor-neutral middleware for Distributed Energy Resources."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GridOS Contributors"},
]
keywords = [
    "energy",
    "smart-grid",
    "DER",
    "digital-twin",
    "microgrid",
    "SCADA",
    "IoT",
    "IEC61850",
    "Modbus",
    "MQTT",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "pulp>=2.8.0",
    "matplotlib>=3.8.0",
    "joblib>=1.3.0",
]
adapters = [
    "pymodbus>=3.6.0",
    "paho-mqtt>=2.0.0",
    "asyncua>=1.1.0",
]
storage = [
    "influxdb-client[async]>=1.40.0",
    "asyncpg>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/iceccarelli/GridOS"
Documentation = "https://github.com/iceccarelli/GridOS/tree/main/docs"
Repository = "https://github.com/iceccarelli/GridOS"
Issues = "https://github.com/iceccarelli/GridOS/issues"
Changelog = "https://github.com/iceccarelli/GridOS/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
